k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-ssh-backend
  labels:
    app: web-ssh-backend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: web-ssh-backend
